Ajout de la validation du formulaire et des messages d'erreur

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="modal-body">
             <!-- Formulaire -->
-            <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+            <form name="reserve" action="index.html" method="get" novalidate>
               <!-- Prénom -->
               <div class="formData">
                 <label for="first">Prénom</label><br>
