Ajouter confirmation quand envoi réussi

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
 
-      <!-- La modale -->
+      <!-- La modale principale -->
       <div class="bground">
         <!-- Contenu de la modale -->
         <div class="content">
@@ -136,9 +136,23 @@
               </div>
 
               <!-- Validation -->
-              <input class="btn-submit" type="submit" class="button" value="C'est parti"/>
+              <input class="btn-submit modal-btn" type="submit" value="C'est parti"/>
             </form>
           </div>
+        </div>
+      </div>
+      <!-- La modale Merci -->
+      <div class="bground-merci">
+        <!-- Contenu de la modale -->
+        <div class="content">
+          <!-- Bouton de fermeture de la modale-->
+          <span class="close-merci"></span>
+
+          <div class="modal-body">
+            Merci pour<br />
+            votre inscription
+          </div>
+          <button class="btn-close modal-btn">Fermer</button>
         </div>
       </div>
     </main>
