--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </div>
 
               <!-- Quel tournoi -->
-              <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+              <p class="text-label">À quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData">
                 <!-- Checkbox radio -->
                 <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" required />
