--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               <!-- Prénom -->
               <div class="formData">
                 <label for="first">Prénom</label><br>
-                  <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
+                  <input class="text-control" type="text" id="first" name="first" minlength="2" required pattern="[A-Za-z]+" /><br>
               </div>
               <!-- Nom -->
               <div class="formData">
                 <label for="last">Nom</label><br>
-                  <input class="text-control" type="text" id="last" name="last" minlength="2" required /><br>
+                  <input class="text-control" type="text" id="last" name="last" minlength="2" required pattern="[A-Za-z]+" /><br>
               </div>
               <!-- E-mail -->
               <div class="formData">
